@@ -155,3 +155,6 @@ EditAliasFolderDlg.FolderNameEmpty=You must enter a name.
 JListAliasesListImpl.confirmDelete=Are you sure to want to delete the alias {0}?
 JTreeAliasesListImpl.confirmDelete=Are you sure to want to delete the alias {0}?
 JTreeAliasesListImpl.confirmDeleteFolder=Are you sure to want to delete the folder {0} and all aliases it contains?
+
+JTreeAliasesListImpl.EditAliasFolderDlgTitle=Edit Aliase folder
+JTreeAliasesListImpl.EditAliasFolderDlgText=Edit Alias folder name:
